; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_backend.c_generate_source_kernel_mp_filename.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_backend.c_generate_source_kernel_mp_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPTI_TYPE_BRUTE_FORCE = common dso_local global i32 0, align 4
@OPTS_TYPE_PT_GENERATE_BE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"%s/OpenCL/markov_be.cl\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"%s/OpenCL/markov_le.cl\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @generate_source_kernel_mp_filename(i32 %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @OPTI_TYPE_BRUTE_FORCE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @OPTS_TYPE_PT_GENERATE_BE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %13
  %19 = load i8*, i8** %8, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = call i32 @snprintf(i8* %19, i32 255, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %20)
  br label %26

22:                                               ; preds = %13, %4
  %23 = load i8*, i8** %8, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @snprintf(i8* %23, i32 255, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  br label %26

26:                                               ; preds = %22, %18
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
